# dd_compare

./: .gitignore  README.jp.md  README.md  app.py  pyproject.toml
CDK20_inhibition/: README.jp.md  README.md
CDK20_inhibition/cross_protein_comparison/: P20794.fasta  Q8IZL9.fasta  manifest.json  report.json
CDK20_inhibition/pocket_detection/: hits.json  hits_ranked.md
data/example_cdk20_cdk2_mak/: manifest.json  report.json
dd_compare/: cli.py  dashboard.py  fetch.py  pdbio.py  pdbstruct.py  pipeline.py  pocket.py  pocketmap.py  scene.py  similarity.py
dd_compare/viewer3d/: __init__.py  component.py  htmlpatch.py
dd_idea/: cli.py  fetch.py  pdbio.py  pdbstruct.py  pipeline.py  pocket.py  pocketmap.py  rank.py  search.py  sequence.py  similarity.py  structalign.py
dd_idea/alphafold/: __init__.py  fetch.py
dd_idea/blast/: __init__.py  parse.py  query.py
dd_idea/chembl/: __init__.py  activity.py  resolve.py
dd_idea/rcsb/: __init__.py  chain.py  fetch.py  select.py
dd_idea/uniprot/: __init__.py  entry.py  family.py
dd_idea/viewer3d/: __init__.py  component.py  htmlpatch.py
tests/: test_blast.py  test_chembl.py  test_pdbstruct.py  test_pocketmap.py  test_rank.py  test_rcsb_chain.py  test_rcsb_fetch.py  test_rcsb_select.py  test_scene.py  test_search.py  test_sequence.py  test_similarity.py
