[project]
name = "dd_compare"
version = "0.1.0"
description = "Cross-protein comparison: given two or more UniProt accessions, align their canonical sequences, map one reference's druggable pocket onto every other protein, and superpose their AlphaFold DB models for visual drug-discovery hint-hunting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["biopython", "pandas", "numpy", "pymol"]

[project.optional-dependencies]
app = ["streamlit", "py3Dmol"]

[project.scripts]
dd_compare-fetch = "dd_compare.cli:main_fetch"
dd_compare-align = "dd_compare.cli:main_align"
dd_compare-run = "dd_compare.cli:main_run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dd_compare", "dd_compare.viewer3d"]

[tool.setuptools.package-data]
"dd_compare.viewer3d" = ["frontend/*.html"]
