[project]
name = "dd_idea"
version = "0.1.0"
description = "Cross-protein comparison: given two or more UniProt accessions, align their canonical sequences, map one reference's druggable pocket onto every other protein, and superpose their AlphaFold DB models for visual drug-discovery hint-hunting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["biopython", "pandas", "numpy", "pymol"]

[project.optional-dependencies]
app = ["streamlit", "py3Dmol"]

[project.scripts]
dd_idea-fetch = "dd_idea.cli:main_fetch"
dd_idea-align = "dd_idea.cli:main_align"
dd_idea-run = "dd_idea.cli:main_run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dd_idea", "dd_idea.viewer3d"]

[tool.setuptools.package-data]
"dd_idea.viewer3d" = ["frontend/*.html"]
